--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,11 @@ header{
     border: 2px solid black;
     background-color: rgb(9, 31, 77);
 }
-div{
-    
+.collection{
+ margin-left: 10px;
+ height: 850px;
+ 
+}
+.cuerpo{
+    display: flex
 }
